fix: remove fallback color behind background image

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,7 +87,6 @@ html {
   min-height: 100%;
   height: 100%;
   height: -webkit-fill-available;
-  background-color: #ece2d6;
   background-image: url('/images/wedding-bg-mobile.jpg');
   background-position: center;
   background-repeat: no-repeat;
